--- a/doc/latex/pgfplots/pgfplots.importexport.tex
+++ b/doc/latex/pgfplots/pgfplots.importexport.tex
@@ -1,5 +1,5 @@
 
-\chapter{Import/Export From Other Formats}
+\part[importexport]{Import/Export From Other Formats}
 \label{cha:pgfplots:importexport}
 
 {
@@ -7,11 +7,11 @@
 
 This chapter contains information of how to single pictures into separate
 \pdf{} graphics files (or \eps{} graphics files). Furthermore, it explains a
-Matlab$^\text{\textregistered}$ script which allows to convert from Matlab to
+Matlab\textregistered{} script which allows to convert from Matlab to
 \PGFPlots{}.
 
 
-\section[Export to PDF/EPS]{Export to {\normalfont\pdf{}/\eps{}}}
+\section[export-pdf-eps]{Export to {\normalfont\pdf{}/\eps{}}}
 \label{sec:pgfplots:export}
 
 It is possible to export images to single \pdf{}-documents using routines of
@@ -652,7 +652,7 @@ need \pgfname{} or \PGFPlots{} installed. See Section``Externalizing Graphics''
 of~\cite{tikz} for details.
 
 
-\section{Importing From Matlab}
+\section[import-matlab]{Importing From Matlab}
 
 \subsection{Importing Mesh Data From Matlab To PGFPlots}
 \label{sec:pgfplots:import:matlab}
@@ -709,7 +709,7 @@ save P.dat data -ASCII
 
 \subsection{matlab2pgfplots.m}
 
-This is a Matlab$^\text{\textregistered}$ script which attempts to convert a
+This is a Matlab\textregistered{} script which attempts to convert a
 Matlab figure to \PGFPlots{}. It requires Matlab version 7.4 (or higher).
 
 
@@ -779,7 +779,7 @@ TeXstring = [ ...
 \end{codeexample}
 
 
-\section{SVG Output}
+\section[export-svg]{SVG Output}
 
 It is possible to write every single \Tikz{} picture into a scalable vector
 graphics (\texttt{.svg}) file. This has nothing to do with \PGFPlots{}, it is a
@@ -787,7 +787,7 @@ separate driver of \PGF{}. Please refer to~\cite[Section ``Producing HTML / SVG
 Output'']{tikz}.
 
 
-\section{Generate \PGFPlots{} Graphics Within Python}
+\section[python]{Generate PGFPlots Graphics Within Python}
 
 Mario Orne DÍAZ ANADÓN contributed a small python script |pgfplots.py| which
 provides a simple interface to generate \PGFPlots{} figures from within python.
