--- a/doc/latex/pgfplots/pgfplots.libs.colorbrewer.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.colorbrewer.tex
@@ -389,7 +389,7 @@
 \end{tikzpicture}%
 }}
 
-\section{ColorBrewer}
+\section[libs.colorbrewer]{ColorBrewer}
 \def\pgfplotsmanualcurlibrary{colormaps}
 
 {\emph{An extension by Vincent A.\ Traag and Stefan Pinnow}}
