--- a/doc/latex/pgfplots/pgfplots.libs.external.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.external.tex
@@ -1,5 +1,5 @@
 
-\section{Image Externalization}
+\section[libs.external]{Image Externalization}
 
 \begingroup
 \def\pgfplotsmanualcurlibrary{external}
