--- a/doc/latex/pgfplots/pgfplots.libs.polar.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.polar.tex
@@ -1,5 +1,5 @@
 
-\section{Polar Axes}
+\section[libs.polar]{Polar Axes}
 \label{sec:polar}
 
 {
@@ -142,7 +142,7 @@ page~\pageref{key:data:cs}.
 
 This does also allow more involved visualization techniques which may operate
 on Cartesian coordinates. The following example uses \verbpdfref{\addplot3} to
-sample a function $f\colon \R^2 \to \R$, computes |contour| lines and displays the result in a |polaraxis|:
+sample a function $f\colon \mathbb{R}^2 \to \mathbb{R}$, computes |contour| lines and displays the result in a |polaraxis|:
 %
 \pgfplotsexpensiveexample
 \begin{codeexample}[]
