--- a/doc/latex/pgfplots/pgfplots.libs.smithchart.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.smithchart.tex
@@ -1,5 +1,5 @@
 
-\section{Smith Charts}
+\section[libs.smithchart]{Smith Charts}
 \label{sec:smithcharts}
 
 \begingroup
@@ -10,8 +10,8 @@
 
     A Smith chart maps the complex half plane with positive real parts to the
     unit circle. The |smithchart| library allows \PGFPlots{} to visualize Smith
-    charts: it visualizes two-dimensional input coordinates $z \in \C $ of the
-    form $z = x+ j y \in \C$ ($j$ being the imaginary unit, $j^2=-1$) with $x
+    charts: it visualizes two-dimensional input coordinates $z \in \mathbb{C} $ of the
+    form $z = x+ j y \in \mathbb{C}$ ($j$ being the imaginary unit, $j^2=-1$) with $x
     \ge 0$ using the map
     %
         \[
