--- a/doc/latex/pgfplots/pgfplots.reference.2dplots.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.2dplots.tex
@@ -1,5 +1,5 @@
 
-\section{Two Dimensional Plot Types}
+\section[reference.2dplots]{Two Dimensional Plot Types}
 
 {%
 \tikzset{external/figure name/.add={}{twodim_}}
@@ -1603,7 +1603,7 @@ of |stack plots=y|, each plot has the same $x$~coordinates).
 \end{tikzpicture}
 \end{codeexample}
 
-\begin{codeexample}[]
+\begin{codeexample}[pre={\begin{lateximage}},post={\end{lateximage}}]
 \pgfplotstableread{pgfplots.timeseries.dat}\loadedtable
 \pgfplotstabletypeset\loadedtable
 \end{codeexample}
