--- a/doc/latex/pgfplots/pgfplots.reference.axisdescription.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.axisdescription.tex
@@ -1,5 +1,5 @@
 
-\section{Axis Descriptions}
+\section[reference.axisdescription]{Axis Descriptions}
 
 Axis descriptions are labels for $x$- and $y$-axis, titles, legends and the
 like. Axis descriptions are drawn after the plot is finished and they are not
@@ -1919,7 +1919,7 @@ computations, and place it absolutely such that it fits. Another is the
     outside of any picture, will cause the legend to be drawn.
 {
 \pgfplotsmanualdisablecolorforref
-\begin{codeexample}[vbox]
+\begin{codeexample}[]
 \pgfplotsset{footnotesize,samples=10}
 \begin{center}% note that \centering uses less vspace...
 \begin{tikzpicture}
@@ -3485,7 +3485,7 @@ which is similar to the related method for legends, |legend to name|:
 
 {
     \pgfplotsmanualdisablecolorforref
-\begin{codeexample}[vbox]
+\begin{codeexample}[]
     \pgfplotsset{footnotesize,samples=10, domain=0:1,point meta min=0, point meta max=1}
 \begin{center}% note that \centering uses less vspace...
     \begin{tikzpicture}
