--- a/doc/latex/pgfplots/pgfplots.reference.bb-clip.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.bb-clip.tex
@@ -1,5 +1,5 @@
 
-\section{The Picture's Size: Bounding Box and Clipping}
+\section[reference.bb-clip]{The Picture's Size: Bounding Box and Clipping}
 
 This section explains how a picture receives its final dimensions. The
 picture's dimension is the bounding box. It is possible to restrict the
