--- a/doc/latex/pgfplots/pgfplots.reference.miscellaneous.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.miscellaneous.tex
@@ -1,5 +1,5 @@
 
-\section{Miscellaneous Options}
+\section[reference.miscellaneous]{Miscellaneous Options}
 \label{sec:pgfplots:misc}
 
 \begin{pgfplotskey}{disablelogfilter=\mchoice{true,false} (initially false, default true)}
