--- a/doc/latex/pgfplots/pgfplots.reference.numberformatting.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.numberformatting.tex
@@ -1,5 +1,5 @@
 
-\section{Number Formatting Options}
+\section[reference.numberformatting]{Number Formatting Options}
 \label{sec:number:printing}
 
 \PGFPlots{} typesets tick labels rounded to given precision and in configurable
@@ -82,12 +82,12 @@ number formatting in \PGFPlots{}.
 \pgfmathprintnumber[print sign]{2}
 \end{codeexample}
 
-\begin{codeexample}[]
+\begin{codeexample}[pre={\begin{lateximage}},post={\end{lateximage}}]
 \pgfmathprintnumber
     [1000 sep={\,},fixed,precision=6]{1000000.123456}
 \end{codeexample}
 
-\begin{codeexample}[]
+\begin{codeexample}[pre={\begin{lateximage}},post={\end{lateximage}}]
 \pgfmathprintnumber[
     1000 sep={\,},fixed,precision=6,
     1000 sep in fractionals]
@@ -248,7 +248,7 @@ first to see if you need this section.
     Set this to |true| if you want to identify log plot tick labels at
     positions
         \[ i \cdot 10^j \]
-    with $i \in \{2,3,4,5,6,7,8,9\},\, j \in \Z$. This may be valuable in
+    with $i \in \{2,3,4,5,6,7,8,9\},\, j \in \mathbb{Z}$. This may be valuable in
     conjunction with the `|extra x ticks|' and `|extra y ticks|' options.
     %
 \begin{codeexample}[]
