--- a/doc/latex/pgfplots/pgfplots.reference.preliminaryoptions.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.preliminaryoptions.tex
@@ -1,5 +1,5 @@
 
-\section{About Options: Preliminaries}
+\section[reference.preliminaryoptions]{About Options: Preliminaries}
 
 \PGFPlots{} knows a whole lot of key--value options which can be (re)defined to
 activate desired features or modified to apply some fine-tuning.
