--- a/doc/latex/pgfplots/pgfplots.reference.texdialects.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.texdialects.tex
@@ -1,5 +1,5 @@
 
-\section{\TeX{} dialects: \LaTeX{}, Con\TeX{}t, plain \TeX{}}
+\section[reference.texdialects]{\TeX{} dialects: \LaTeX{}, Con\TeX{}t, plain \TeX{}}
 \label{sec:tex:dialects}
 
 The starting point for \PGFPlots{} is an |axis| environment like |axis| or the
