--- a/doc/latex/pgfplots/pgfplots.reference.tickoptions.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.tickoptions.tex
@@ -1,5 +1,5 @@
 
-\section{Tick Options}
+\section[reference.tickoptions]{Tick Options}
 \label{sec:pgfplots:ticks}
 
 \subsection{Tick Coordinates and Label Texts}
