--- a/doc/latex/pgfplots/pgfplots.reference.tikzinteroperability.tex
+++ b/doc/latex/pgfplots/pgfplots.reference.tikzinteroperability.tex
@@ -1,5 +1,5 @@
 
-\section{\tikzname{} Interoperability}
+\section[reference.tikzinteroperability]{\tikzname{} Interoperability}
 \label{sec:pgfplots:tikz:interoperability}
 
 \PGFPlots{} uses \Tikz{}/\pgfname{} as its ``backend layer''. This implies that it
