--- a/doc/latex/pgfplots/pgfplots.title_abstract_intro.tex
+++ b/doc/latex/pgfplots/pgfplots.title_abstract_intro.tex
@@ -1,5 +1,5 @@
 
-\chapter{Introduction}
+\section[index]{Introduction}
 
 This package provides tools to generate plots and labeled axes easily. It draws
 normal plots, log plots and semi-log plots, in two and three dimensions. Axis
