--- a/doc/latex/pgfplots/pgfplots.tutorial1.tex
+++ b/doc/latex/pgfplots/pgfplots.tutorial1.tex
@@ -1,5 +1,5 @@
 
-\section{Solving a Real Use Case: Function Visualization}
+\section[tutorial1]{Solving a Real Use Case: Function Visualization}
 
 In this section, we assume that you want to visualize two functions. The first
 function is given by means of a data table. The second function is given by
