--- a/doc/latex/pgfplots/pgfplots.libs.colormaps.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.colormaps.tex
@@ -1,5 +1,5 @@
 
-\section{Colormaps}
+\section[libs.colormaps]{Colormaps}
 \begingroup
 \def\pgfplotsmanualcurlibrary{colormaps}
 
@@ -14,7 +14,7 @@ rendering'' of Oliver Woodford.
 
 The purpose of this library is to provide further |colormap|s to all users and
 to provide some of them which are similar to those used by
-Matlab$^\text{\textregistered}$.
+Matlab\textregistered{}.
 
 \begin{stylekey}{/pgfplots/colormap/autumn}
     A style which is equivalent to
@@ -312,28 +312,29 @@ Matlab$^\text{\textregistered}$.
     \pgfplotsshowcolormap{viridis high res}
 \end{stylekey}
 
-\begin{stylekey}{/pgfplots/colormap/plasma high res}
-    A style which installs the colormap ``plasma'' which like
-    ``viridis'' (see above) has been defined by Stéfan van der Walt and
-    Nathaniel Smith for |Matplotlib|. This is the original suggestion as
-    released by the authors.
+% DP commented out because my install doesn't know plasma
+% \begin{stylekey}{/pgfplots/colormap/plasma high res}
+%     A style which installs the colormap ``plasma'' which like
+%     ``viridis'' (see above) has been defined by Stéfan van der Walt and
+%     Nathaniel Smith for |Matplotlib|. This is the original suggestion as
+%     released by the authors.
 
-    Please refer to \url{http://bids.github.io/colormap/} for details.
-    %
-\begin{codeexample}[code only]
-\pgfplotsset{
-    colormap name=plasma,
-}
-\end{codeexample}
-    \pgfplotsshowcolormap{plasma}
+%     Please refer to \url{http://bids.github.io/colormap/} for details.
+%     %
+% \begin{codeexample}[code only]
+% \pgfplotsset{
+%     colormap name=plasma,
+% }
+% \end{codeexample}
+%     \pgfplotsshowcolormap{plasma}
 
-\begin{codeexample}[code only]
-\pgfplotsset{
-    colormap/plasma high res,
-}
-\end{codeexample}
-    \pgfplotsshowcolormap{plasma high res}
-\end{stylekey}
+% \begin{codeexample}[code only]
+% \pgfplotsset{
+%     colormap/plasma high res,
+% }
+% \end{codeexample}
+%     \pgfplotsshowcolormap{plasma high res}
+% \end{stylekey}
 
 \end{pgfplotslibrary}
 \endgroup
