--- a/doc/latex/pgfplots/pgfplots.libs.decorations.softclip.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.decorations.softclip.tex
@@ -1,5 +1,5 @@
 
-\section{Decoration: Soft Clipping}
+\section[libs.decorations.softclip]{Decoration: Soft Clipping}
 
 \begingroup
 \def\pgfplotsmanualcurlibrary{decorations.softclip}
