--- a/doc/latex/pgfplots/pgfplots.libs.tex
+++ b/doc/latex/pgfplots/pgfplots.libs.tex
@@ -1,5 +1,5 @@
 
-\chapter{Related Libraries}
+\part[libs]{Related Libraries}
 
 This chapter describes some libraries which come with \PGFPlots{}, but they are
 more or less special and need to be activated separately.
@@ -10,13 +10,11 @@ more or less special and need to be activated separately.
 
 \input{pgfplots.libs.clickable.tex}
 \input{pgfplots.libs.colorbrewer.tex}
-\input{pgfplots.libs.colormaps.tex}
-%\input{pgfplots.libs.colortol.tex}         % not ready yet
+\input{pgfplots.libs.colormaps.tex} % DP FIX my install doesn't know plasma on line 328
 \input{pgfplots.libs.dateplot.tex}
 \input{pgfplots.libs.decorations.softclip.tex}
 \input{pgfplots.libs.external.tex}
 \input{pgfplots.libs.fillbetween.tex}
-%\section{FIXME} \endinput
 \input{pgfplots.libs.groupplots.tex}
 \input{pgfplots.libs.patchplots.tex}
 \input{pgfplots.libs.polar.tex}
